--- a/tests.html
+++ b/tests.html
@@ -15,7 +15,7 @@
 
     <script src="earcut.js" type="text/javascript"></script>
     <script src="api.js" type="text/javascript"></script>
-    <script src="test.js" type="text/javascript"></script>
+    <script src="tests.js" type="text/javascript"></script>
     <script type="text/javascript">
 
         function printCode(name, code) {
