--- a/tests.html
+++ b/tests.html
@@ -13,8 +13,8 @@
     <br />
     <textarea id="code" name="" cols="30" rows="10"></textarea>
 
-    <script src="earcut.js" type="text/javascript"></script>
-    <script src="api.js" type="text/javascript"></script>
+    <script src="lib/earcut.js" type="text/javascript"></script>
+    <script src="lib/api.js" type="text/javascript"></script>
     <script src="tests.js" type="text/javascript"></script>
     <script type="text/javascript">
 
