Move api.gcode.CutProperties into api.CutProperties.

--- a/tests.html
+++ b/tests.html
@@ -35,7 +35,7 @@
         var feedrate = 120;
         var safeZ = 3;
         var depth = 2;
-        var cutProperties = new api.gcode.CutProperties(
+        var cutProperties = new api.CutProperties(
             bitWidth, bitLength, stepover, feedrate
         );
         var tabProperties = new api.gcode.TabProperties(1, 0.5);
