--- a/tests.html
+++ b/tests.html
@@ -40,10 +40,22 @@
         );
         var tabProperties = new api.TabProperties(1, 0.5);
 
-        var codePocketNonConvex = api.gcode.pocketSimplePolygon(
-            getNonConvexPolygon(), depth, cutProperties, safeZ
+        // var codePocketNonConvex = api.gcode.pocketSimplePolygon(
+        //     getNonConvexPolygon(), depth, cutProperties, safeZ
+        // );
+        // printCodeInTextarea("codePocketNonConvex", codePocketNonConvex);
+
+        var codePocketInnerConvex = api.gcode.pocketInnerConvexPolygon(
+           getConvexPolygon(), 3, cutProperties,
+           true, 3
         );
-        printCodeInTextarea("codePocketNonConvex", codePocketNonConvex);
+        printCodeInTextarea("codePocketInnerConvex", codePocketInnerConvex);
+
+        // var codePocketConvex = api.gcode.pocketConvexPolygon(
+        //    getConvexPolygon(), 3, new api.CutProperties(1, 2, 0.3, 120), 3
+        // );
+        // printCodeInTextarea("codePocketConvex", codePocketConvex);
+
     </script>
 </body>
 </html>
